#15 deprecated конструкторы заменены на вызовы valueOf